[tool.poetry]
name = "wireguard-mesh-helper"
version = "0.1.0"
description = ""
authors = ["Lucien Shui <lucien@lucien.ink>"]
license = "Apache-2.0 license"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
